--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -8,7 +8,7 @@
     tools:context=".ListActivity" >
 
     <ListView
-        android:id="@+id/posts_listview"
+        android:id="@+id/list"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </LinearLayout>
