Resolve activity issue

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,12 +1,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
-    <item android:id="@+id/action_settings"
-        android:icon="@drawable/ic_action_settings"
-        android:title="@string/action_settings"
+    <item android:id="@+id/action_gems"
+        android:title="@string/action_gems"
         android:orderInCategory="100"
-        android:showAsAction="ifRoom" />
-    <item android:id="@+id/action_help"
-        android:title="@string/action_help"
+        android:showAsAction="never" />
+    <item android:id="@+id/action_leaderboard"
+        android:title="@string/action_leaderboard"
         android:orderInCategory="150"
         android:showAsAction="never" />
 </menu>
