Fix sign up activity

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -8,4 +8,8 @@
         android:title="@string/action_leaderboard"
         android:orderInCategory="150"
         android:showAsAction="never" />
+    <item android:id="@+id/action_login"
+        android:title="@string/login"
+        android:orderInCategory="150"
+        android:showAsAction="never" />
 </menu>
