--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,11 +1,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
     <item android:id="@+id/action_gems"
-        android:title="@string/action_gems"
+        android:title="@string/gems"
         android:orderInCategory="100"
         android:showAsAction="never" />
     <item android:id="@+id/action_leaderboard"
-        android:title="@string/action_leaderboard"
+        android:title="@string/leaderboard"
+        android:orderInCategory="150"
+        android:showAsAction="never" />
+    <item android:id="@+id/action_settings"
+        android:title="@string/settings"
         android:orderInCategory="150"
         android:showAsAction="never" />
     <item android:id="@+id/action_login"
