--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,29 +18,30 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:textSize="28sp"
+        android:textSize="24sp"
+        android:textStyle="bold"
         android:layout_gravity="center_horizontal|top" />
 
     <ImageView
         android:id="@+id/center_button"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_marginBottom="20dp"
         android:src="@drawable/center"
         android:layout_gravity="left|bottom" />
 
     <ImageView
         android:id="@+id/scan_button"
-        android:layout_width="210dp"
-        android:layout_height="70dp"
+        android:layout_width="180dp"
+        android:layout_height="60dp"
         android:layout_marginBottom="20dp"
         android:src="@drawable/scan"
         android:layout_gravity="center_horizontal|bottom" />
 
     <ImageView
         android:id="@+id/bag_button"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_marginBottom="20dp"
         android:src="@drawable/bag"
         android:layout_gravity="right|bottom" />
