--- a/app/src/main/res/layout/activity_mode.xml
+++ b/app/src/main/res/layout/activity_mode.xml
@@ -3,8 +3,94 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mode_view"
     android:orientation="vertical"
+    android:gravity="center"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ModeActivity" >
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/mode"
+        android:textSize="24sp"
+        android:textColor="#ff0000"
+        android:textStyle="bold" />
+
+    <LinearLayout
+        android:id="@+id/modes"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="40dp" >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/walk"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:clickable="true"
+            android:onClick="modeSelected" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/skateboard"
+            android:layout_marginTop="10dp"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:clickable="true"
+            android:onClick="modeSelected" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/bicycle"
+            android:layout_marginTop="10dp"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:clickable="true"
+            android:onClick="modeSelected" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/wheelchair"
+            android:layout_marginTop="10dp"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:clickable="true"
+            android:onClick="modeSelected" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/skate"
+            android:layout_marginTop="10dp"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:clickable="true"
+            android:onClick="modeSelected" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/ski"
+            android:layout_marginTop="10dp"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:clickable="true"
+            android:onClick="modeSelected" />
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/start_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/start"
+        android:textSize="24sp"
+        android:textColor="#ff0000"
+        android:textStyle="bold" />
 </LinearLayout>
