--- a/app/src/main/res/layout/activity_egg.xml
+++ b/app/src/main/res/layout/activity_egg.xml
@@ -10,6 +10,7 @@
     <LinearLayout
         android:id="@+id/egg"
         android:orientation="vertical"
+        android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
@@ -26,6 +27,7 @@
         <LinearLayout
             android:id="@+id/questions"
             android:orientation="vertical"
+            android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
@@ -33,7 +35,7 @@
             android:id="@+id/cancel_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="20dp"
             android:paddingLeft="32dp"
             android:paddingRight="32dp"
             android:text="@string/cancel" />
@@ -42,7 +44,7 @@
             android:id="@+id/submit_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="20dp"
             android:paddingLeft="32dp"
             android:paddingRight="32dp"
             android:text="@string/submit" />
