--- a/app/src/main/res/layout/activity_egg.xml
+++ b/app/src/main/res/layout/activity_egg.xml
@@ -28,7 +28,8 @@
             android:id="@+id/image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp" />
+            android:layout_marginTop="20dp"
+            android:src="@drawable/bag" />
 
         <TextView
             android:layout_width="wrap_content"
