--- a/app/src/main/res/layout/activity_mode.xml
+++ b/app/src/main/res/layout/activity_mode.xml
@@ -12,7 +12,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/mode"
+        android:text="@string/pick"
         android:textSize="24sp"
         android:textColor="#ff0000"
         android:textStyle="bold" />
