--- a/app/src/main/res/layout/activity_egg.xml
+++ b/app/src/main/res/layout/activity_egg.xml
@@ -24,12 +24,11 @@
             android:textSize="20sp"
             android:textStyle="bold" />
 
-        <ImageView
+        <com.parse.ParseImageView
             android:id="@+id/image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:src="@drawable/bag" />
+            android:layout_marginTop="20dp" />
 
         <TextView
             android:layout_width="wrap_content"
