--- a/app/src/main/res/layout/activity_egg.xml
+++ b/app/src/main/res/layout/activity_egg.xml
@@ -13,14 +13,22 @@
         android:orientation="vertical"
         android:gravity="center_horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp" >
+        android:layout_height="wrap_content" >
+
+        <TextView
+            android:id="@+id/cancel_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:text="@string/exit"
+            android:layout_gravity="end" />
 
         <TextView
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
             android:textSize="20sp"
             android:textStyle="bold" />
 
@@ -48,20 +56,12 @@
             android:layout_marginBottom="20dp" />
 
         <Button
-            android:id="@+id/cancel_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="32dp"
-            android:paddingRight="32dp"
-            android:text="@string/cancel" />
-
-        <Button
             android:id="@+id/submit_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:paddingLeft="32dp"
-            android:paddingRight="32dp"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
             android:text="@string/submit" />
     </LinearLayout>
 </ScrollView>
