--- a/app/src/main/res/layout/list_item_user.xml
+++ b/app/src/main/res/layout/list_item_user.xml
@@ -4,8 +4,7 @@
     android:orientation="vertical"
     android:gravity="center"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="10dp" >
+    android:layout_height="match_parent" >
 
     <TextView
         android:id="@+id/list_item_title"
@@ -16,6 +15,8 @@
         android:layout_alignParentLeft="true"
         android:layout_toStartOf="@+id/list_item_points"
         android:layout_toLeftOf="@id/list_item_points"
+        android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginRight="10dp"
         android:textSize="20sp"
@@ -28,6 +29,8 @@
         android:layout_height="50dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
+        android:layout_marginEnd="10dp"
+        android:layout_marginRight="10dp"
         android:textSize="20sp"
         android:textStyle="bold" />
 </RelativeLayout>
