Many many changes

--- a/app/src/main/res/layout/list_item_egg.xml
+++ b/app/src/main/res/layout/list_item_egg.xml
@@ -5,27 +5,29 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <com.parse.ParseImageView
-        android:id="@+id/list_item_image"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_marginStart="10dp"
-        android:layout_marginLeft="10dp"
-        android:src="@drawable/icon"/>
-
     <TextView
         android:id="@+id/list_item_title"
         android:gravity="center_vertical"
         android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_toEndOf="@id/list_item_image"
-        android:layout_toRightOf="@id/list_item_image"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
+        android:layout_height="100dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_toStartOf="@+id/list_item_points"
+        android:layout_toLeftOf="@id/list_item_points"
         android:layout_marginStart="10dp"
         android:layout_marginLeft="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginRight="10dp"
+        android:textSize="20sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@id/list_item_points"
+        android:gravity="center_vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="100dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
         android:layout_marginEnd="10dp"
         android:layout_marginRight="10dp"
         android:textSize="20sp"
