--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,6 +10,7 @@
     </style>
 
     <style name="ActionBarStyle" parent="@android:style/Widget.Holo.Light.ActionBar">
+        <item name="android:logo">@android:color/transparent</item>
         <item name="android:background">#ff0000</item>
         <item name="android:titleTextStyle">@style/ActionBarTextStyle</item>
     </style>
