--- a/app/src/main/res/layout/activity_egg.xml
+++ b/app/src/main/res/layout/activity_egg.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="20dp"
+    android:background="#ffffff"
     tools:context=".EggActivity" >
 
     <LinearLayout
@@ -52,7 +53,7 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="40dp"
             android:layout_marginBottom="20dp" />
 
         <Button
