--- a/app/src/main/res/layout/list_item_egg.xml
+++ b/app/src/main/res/layout/list_item_egg.xml
@@ -19,7 +19,7 @@
         android:src="@drawable/icon" />
 
     <TextView
-        android:id="@id/list_item_title"
+        android:id="@+id/list_item_title"
         android:gravity="center_vertical"
         android:layout_width="wrap_content"
         android:layout_height="100dp"
