--- a/app/src/main/res/layout/list_item_egg.xml
+++ b/app/src/main/res/layout/list_item_egg.xml
@@ -3,17 +3,16 @@
     android:id="@+id/list_item_egg"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:padding="10dp" >
 
     <com.parse.ParseImageView
         android:id="@+id/list_item_image"
         android:gravity="center_vertical"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
-        android:layout_marginStart="10dp"
-        android:layout_marginLeft="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginRight="10dp"
         android:src="@drawable/icon" />
@@ -22,13 +21,11 @@
         android:id="@+id/list_item_title"
         android:gravity="center_vertical"
         android:layout_width="wrap_content"
-        android:layout_height="100dp"
+        android:layout_height="75dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_toEndOf="@id/list_item_image"
         android:layout_toRightOf="@id/list_item_image"
-        android:layout_marginEnd="10dp"
-        android:layout_marginRight="10dp"
         android:textSize="20sp"
         android:textStyle="bold" />
 </RelativeLayout>
