--- a/app/src/main/res/layout/list_item_user.xml
+++ b/app/src/main/res/layout/list_item_user.xml
@@ -3,19 +3,18 @@
     android:id="@+id/list_item_user"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:padding="10dp" >
 
     <TextView
         android:id="@+id/list_item_title"
         android:gravity="center_vertical"
         android:layout_width="wrap_content"
-        android:layout_height="100dp"
+        android:layout_height="75dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_toStartOf="@+id/list_item_points"
         android:layout_toLeftOf="@+id/list_item_points"
-        android:layout_marginStart="10dp"
-        android:layout_marginLeft="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginRight="10dp"
         android:textSize="20sp"
@@ -25,11 +24,9 @@
         android:id="@id/list_item_points"
         android:gravity="center_vertical"
         android:layout_width="wrap_content"
-        android:layout_height="100dp"
+        android:layout_height="75dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginEnd="10dp"
-        android:layout_marginRight="10dp"
-        android:textSize="20sp"
+        android:textSize="24sp"
         android:textStyle="bold" />
 </RelativeLayout>
