--- a/app/src/main/res/layout/activity_egg.xml
+++ b/app/src/main/res/layout/activity_egg.xml
@@ -16,11 +16,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
-        <TextView
+        <ca.winnipegtrails.winnipegtrails.CustomTextView
             android:id="@+id/cancel_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="24sp"
+            android:textSize="20sp"
             android:textStyle="bold"
             android:text="@string/exit"
             android:layout_gravity="end" />
