--- a/app/src/main/res/layout/activity_mode.xml
+++ b/app/src/main/res/layout/activity_mode.xml
@@ -6,15 +6,15 @@
     android:gravity="center"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="20dp"
+    android:padding="10dp"
     android:background="#ffffff"
     tools:context=".ModeActivity" >
 
-    <TextView
+    <ca.winnipegtrails.winnipegtrails.CustomTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/pick"
-        android:textSize="24sp"
+        android:textSize="20sp"
         android:textColor="#ff0000"
         android:textStyle="bold" />
 
@@ -24,75 +24,75 @@
         android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="40dp" >
+        android:layout_marginTop="40dp"
+        android:layout_marginBottom="60dp" >
 
-        <TextView
+        <ca.winnipegtrails.winnipegtrails.CustomTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/walk"
-            android:textSize="24sp"
+            android:textSize="20sp"
             android:textStyle="bold"
             android:clickable="true"
             android:onClick="modeSelected" />
 
-        <TextView
+        <ca.winnipegtrails.winnipegtrails.CustomTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/skateboard"
             android:layout_marginTop="10dp"
-            android:textSize="24sp"
+            android:textSize="20sp"
             android:textStyle="bold"
             android:clickable="true"
             android:onClick="modeSelected" />
 
-        <TextView
+        <ca.winnipegtrails.winnipegtrails.CustomTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/bicycle"
             android:layout_marginTop="10dp"
-            android:textSize="24sp"
+            android:textSize="20sp"
             android:textStyle="bold"
             android:clickable="true"
             android:onClick="modeSelected" />
 
-        <TextView
+        <ca.winnipegtrails.winnipegtrails.CustomTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/wheelchair"
             android:layout_marginTop="10dp"
-            android:textSize="24sp"
+            android:textSize="20sp"
             android:textStyle="bold"
             android:clickable="true"
             android:onClick="modeSelected" />
 
-        <TextView
+        <ca.winnipegtrails.winnipegtrails.CustomTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/skate"
             android:layout_marginTop="10dp"
-            android:textSize="24sp"
+            android:textSize="20sp"
             android:textStyle="bold"
             android:clickable="true"
             android:onClick="modeSelected" />
 
-        <TextView
+        <ca.winnipegtrails.winnipegtrails.CustomTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/ski"
             android:layout_marginTop="10dp"
-            android:textSize="24sp"
+            android:textSize="20sp"
             android:textStyle="bold"
             android:clickable="true"
             android:onClick="modeSelected" />
     </LinearLayout>
 
-    <TextView
+    <ca.winnipegtrails.winnipegtrails.CustomTextView
         android:id="@+id/start_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/start"
-        android:textSize="24sp"
+        android:textSize="20sp"
         android:textColor="#ff0000"
         android:textStyle="bold" />
 </LinearLayout>
