--- a/app/src/main/res/layout/list_item_egg.xml
+++ b/app/src/main/res/layout/list_item_egg.xml
@@ -16,7 +16,7 @@
         android:layout_marginEnd="10dp"
         android:layout_marginRight="10dp" />
 
-    <TextView
+    <ca.winnipegtrails.winnipegtrails.CustomTextView
         android:id="@+id/list_item_title"
         android:gravity="center_vertical"
         android:layout_width="wrap_content"
@@ -25,6 +25,6 @@
         android:layout_alignParentRight="true"
         android:layout_toEndOf="@id/list_item_image"
         android:layout_toRightOf="@id/list_item_image"
-        android:textSize="20sp"
+        android:textSize="18sp"
         android:textStyle="bold" />
 </RelativeLayout>
