--- a/app/src/main/res/layout/list_item_user.xml
+++ b/app/src/main/res/layout/list_item_user.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:padding="10dp" >
 
-    <TextView
+    <ca.winnipegtrails.winnipegtrails.CustomTextView
         android:id="@+id/list_item_title"
         android:gravity="center_vertical"
         android:layout_width="wrap_content"
@@ -17,16 +17,16 @@
         android:layout_toLeftOf="@+id/list_item_points"
         android:layout_marginEnd="10dp"
         android:layout_marginRight="10dp"
-        android:textSize="20sp"
+        android:textSize="18sp"
         android:textStyle="bold" />
 
-    <TextView
+    <ca.winnipegtrails.winnipegtrails.CustomTextView
         android:id="@id/list_item_points"
         android:gravity="center_vertical"
         android:layout_width="wrap_content"
         android:layout_height="75dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:textSize="24sp"
+        android:textSize="20sp"
         android:textStyle="bold" />
 </RelativeLayout>
