--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -52,5 +52,6 @@
         android:layout_marginTop="20dp"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
-        android:text="@string/signup" />
+        android:text="@string/signup"
+        android:layout_gravity="end"/>
 </LinearLayout>
